--- a/LeaveManagement/web/WEB-INF/web.xml
+++ b/LeaveManagement/web/WEB-INF/web.xml
@@ -12,6 +12,14 @@
         <servlet-name>CreateRequestServlet</servlet-name>
         <servlet-class>controller.CreateRequestServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PendingRequestsServlet</servlet-name>
+        <servlet-class>controller.PendingRequestsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewRequestServlet</servlet-name>
+        <servlet-class>controller.ViewRequestServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -23,5 +31,13 @@
     <servlet-mapping>
         <servlet-name>CreateRequestServlet</servlet-name>
         <url-pattern>/createRequest</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PendingRequestsServlet</servlet-name>
+        <url-pattern>/pendingRequests</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewRequestServlet</servlet-name>
+        <url-pattern>/viewRequest</url-pattern>
     </servlet-mapping>
 </web-app>
