--- a/LeaveManagement/web/WEB-INF/web.xml
+++ b/LeaveManagement/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>ViewRequestServlet</servlet-name>
         <servlet-class>controller.ViewRequestServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>OwnRequestsServlet</servlet-name>
+        <servlet-class>controller.OwnRequestsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -39,5 +43,9 @@
     <servlet-mapping>
         <servlet-name>ViewRequestServlet</servlet-name>
         <url-pattern>/viewRequest</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OwnRequestsServlet</servlet-name>
+        <url-pattern>/ownRequests</url-pattern>
     </servlet-mapping>
 </web-app>
